--- a/Project_1.html
+++ b/Project_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Project_1.css">
+        <link rel="stylesheet" href="css/Project_1.css">
     </head>
     <title>Zachery Danis</title>
     <body>
