--- a/Project_1.html
+++ b/Project_1.html
@@ -8,7 +8,7 @@
     <div class="about_me">
     <h1 style="text-align:center;">About Me</h1>
         <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off on on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. I am originally from New Hampshire and moved to Florida when I was 21.</p>
-        <img src="IMG_3832.jpg" alt="Credit to Nemesis Photo" width="300" height="200" border="5">
+        <img src="IMG_3832.jpg" width="300" height="200" border="5">
         <img src="IMG_2947.jpg" alt="Tali and Quinn" width="200" height="200" border="5">
         <p>I am a Veteran of the U.S. Army, which is where I learned a love of working with computers. I served three and half years of activity duty, moving around to places such as South Carolina, Texas, South Korea, and Georgia. During my time in the Army I also received many tattoos; I currently have six tattoos which amount to roughly thirty-five hours.
         </p>
