--- a/Project_1.html
+++ b/Project_1.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="css/Project_1.css">
-    </head>
+        <link rel="stylesheet" href="Project_1.css">
     <title>Zachery Danis</title>
+    </head>
     <body>
     <div class="about_me">
+    <canvas id="myCanvas" width="550" height="100" style="border:1px solid #000000">
+        <script>
+            var c = document.getElementById("myCanvas");
+            var ctx = c.getContext("2d");
+            ctx.font = "75px Times New Roman";
+            ctx.strokeText("Zachery Danis", 55, 65);
+        </script>
+    </canvas>
     <h1 style="text-align:center;">About Me</h1>
-        <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off on on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. I am originally from New Hampshire and moved to Florida when I was 21.</p>
-        <img src="IMG_3832.JPG" alt="Credit to Nemesis Photo" width="300" height="200" border="5">
-        <img src="IMG_2947.JPG" width="200" height="200" border="5">
+        <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off and on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. In November of 2017, Tali slipped a disk her spine which paralyzed her. It is easy to see in the video below that the paralysis has not slowed her down. I am originally from New Hampshire, I lived there for 18 years before leaving. I moved to Jacksonville, Florida when I was 21. My wife and I lived there for a over a year and eventually moved down to Fort Myers so we could attend college and be closer to family.</p>
+        <img src="IMG_3832.jpg" alt="Credit to Nemesis Photo" width="300" height="200">
+        <img src="IMG_2947.jpg" alt="Tali and Quinn" width="200" height="200" >
+        <video controls width="200" height="300">
+            <source src="IMG_2963.MOV">
+        </video>
+        <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I still continue to listen to a very wide variety but I think of an genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, This is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
+        <audio controls>
+            <source src="08%20IV.%20Sweatpants.wav" type="audio/wav">
+            <p>Your browser does not support the audio element</p>
+        </audio>
+            <audio controls> <source src="02%20Our%20Lady%20Of%20Perpetual%20Sorrow.wav" type="audio/wav">
+                <p>Your browser does not support the audio element</p>
+        </audio>
         <p>I am a Veteran of the U.S. Army, which is where I learned a love of working with computers. I served three and half years of activity duty, moving around to places such as South Carolina, Texas, South Korea, and Georgia. During my time in the Army I also received many tattoos; I currently have six tattoos which amount to roughly thirty-five hours.
         </p>
         <!--when adding a photo move photo to the folder you are deriving the code from-->
-        <img src="IMG_2753.JPG" height="250" width="200" border="5">
-        <img src="IMG_3895.JPG" height="250" width="200" border="5">
+        <img src="IMG_2753.JPG" height="250" width="200" alt="Army">
+        <svg width="200" height="250">
+            <polygon points="100,10 40 198 190, 78 10, 78 160,198" style="fill:forestgreen;stroke:goldenrod;stroke-width:3;fill-rule:evenodd;"/>
+        </svg>
+        <img src="IMG_3895.JPG" height="250" width="200" alt="sleeve">
     </div>
-    <div id="Additional" border="50">
-        <img src="United_States_Army" height="200" width="200" border="0" class="army">
+    <div id="Additional" >
+        <img src="United_States_Army" height="200" width="200" class="army" alt="armyLogo">
+
         <h2>Educational Experience</h2>
         <ul>
             <li>Advanced Individual Training</li>
@@ -25,6 +48,7 @@
             <li>Calculus</li>
             <li>Computer Science</li>
         </ul>
+       
     <h3>Work Samples</h3>
         <ul>
             <li>U.S. Army Intelligence</li>
@@ -37,12 +61,14 @@
             <li>Team Leader for my unit</li>
             <li>A member of the National Society of Collegiate Scholars</li>
         </ul>
-    <img src="NSCS" width="200" height="200" border="0" class="nscs">
-    <h4>Profiles</h4>
+    <img src="NSCS" width="200" height="200" class="nscs" alt="nscs">
+    <h4>Profiles and Links</h4>
         <ul>
             <li><a href="https://github.com/zjdanis">Github</a></li>
             <li><a href="https://www.codecademy.com/zdanis">Codecademy</a></li>
+            <li><a href="FieldsReportDanis.pdf">Fields Report</a></li>
         </ul>
-        </div>    
+        </div>
+        
     </body>
 </html>
