--- a/Project_1.html
+++ b/Project_1.html
@@ -16,14 +16,14 @@
     </canvas>
     <h1 style="text-align:center;">About Me</h1>
         <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off and on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. In November of 2017, Tali slipped a disk her spine which paralyzed her. It is easy to see in the video below that the paralysis has not slowed her down. I am originally from New Hampshire, I lived there for 18 years before leaving. I moved to Jacksonville, Florida when I was 21. My wife and I lived there for a over a year and eventually moved down to Fort Myers so we could attend college and be closer to family.</p>
-        <img src="IMG_3832.jpg" alt="Credit to Nemesis Photo" width="300" height="200">
-        <img src="IMG_2947.jpg" alt="Tali and Quinn" width="200" height="200" >
+        <img src="IMG_3832.JPG" alt="Credit to Nemesis Photo" width="300" height="200">
+        <img src="IMG_2947.JPG" alt="Tali and Quinn" width="200" height="200" >
         <video controls width="200" height="300">
             <source src="IMG_2963.MOV">
         </video>
         <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I still continue to listen to a very wide variety but I think of an genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, This is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
         <audio controls>
-            <source src="08%20IV.%20Sweatpants.wav" type="audio/wav">
+            <source src="08%20IV.%20Sweatpants.wma" type="audio/wma">
             <p>Your browser does not support the audio element</p>
         </audio>
             <audio controls> <source src="02%20Our%20Lady%20Of%20Perpetual%20Sorrow.wav" type="audio/wav">
