--- a/Project_1.html
+++ b/Project_1.html
@@ -23,7 +23,7 @@
         </video>
         <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I still continue to listen to a very wide variety but I think of an genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, This is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
         <audio controls>
-            <source src="08%20IV.%20Sweatpants.wma" type="audio/wma">
+            <source src="08%20IV.%20Sweatpants.wav" type="audio/wav">
             <p>Your browser does not support the audio element</p>
         </audio>
             <audio controls> <source src="02%20Our%20Lady%20Of%20Perpetual%20Sorrow.wav" type="audio/wav">
