--- a/Project_1.html
+++ b/Project_1.html
@@ -23,10 +23,10 @@
         </video>
         <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I still continue to listen to a very wide variety but I think of an genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, This is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
         <audio controls>
-            <source src="08%20IV.%20Sweatpants.wav" type="audio/wav">
+            <source src="08%20IV.%20Sweatpants%20(online-audio-converter.com).mp3" type="audio/mp3">
             <p>Your browser does not support the audio element</p>
         </audio>
-            <audio controls> <source src="02%20Our%20Lady%20Of%20Perpetual%20Sorrow.wav" type="audio/wav">
+            <audio controls> <source src="02%20Our%20Lady%20Of%20Perpetual%20Sorrow%20(online-audio-converter.com).mp3" type="audio/mp3">
                 <p>Your browser does not support the audio element</p>
         </audio>
         <p>I am a Veteran of the U.S. Army, which is where I learned a love of working with computers. I served three and half years of activity duty, moving around to places such as South Carolina, Texas, South Korea, and Georgia. During my time in the Army I also received many tattoos; I currently have six tattoos which amount to roughly thirty-five hours.
@@ -68,7 +68,7 @@
             <li><a href="https://www.codecademy.com/zdanis">Codecademy</a></li>
             <li><a href="FieldsReportDanis.pdf">Fields Report</a></li>
         </ul>
-        </div>
+     </div>
         
     </body>
 </html>
