--- a/Project_1.html
+++ b/Project_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://zjdanis.github.io/Project_1/Project_1.css">
+        <link rel="stylesheet" href="Project_1.css">
     <title>Zachery Danis</title>
     </head>
     <body>
