--- a/Project_1.html
+++ b/Project_1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="Project_1.css">
+        <link rel="stylesheet" href="css/Project_1.css">
+        <title>Zachery Danis</title>
     </head>
-    <title>Zachery Danis</title>
     <body>
     <div class="about_me">
     <canvas id="myCanvas" width="550" height="100" style="border:1px solid #000000">
