--- a/Project_1.html
+++ b/Project_1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+    <meta charset="UTF-8">
     <head>
         <link rel="stylesheet" href="css/Project_1.css">
         <title>Zachery Danis</title>
