--- a/Project_1.html
+++ b/Project_1.html
@@ -16,13 +16,13 @@
         </script>
     </canvas>
     <h1 style="text-align:center;">About Me</h1>
-        <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off and on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. In November of 2017, Tali slipped a disk her spine which paralyzed her. It is easy to see in the video below that the paralysis has not slowed her down. I am originally from New Hampshire, I lived there for 18 years before leaving. I moved to Jacksonville, Florida when I was 21. My wife and I lived there for a over a year and eventually moved down to Fort Myers so we could attend college and be closer to family.</p>
+        <p>My name is Zachery Danis, I am 25 years old and recently got married to my wife, Jen. We became best friends in high school and dated off and on. This April we will be celebrating six years together. We have two dogs together, Tali a French Bulldog and Quinn a Boston Terrier. In November of 2017, Tali slipped a disk her spine which paralyzed her. It is easy to see in the video below that the paralysis has not slowed her down. I am originally from New Hampshire, I lived there for 18 years before leaving. I moved to Jacksonville, Florida when I was 21. My wife and I lived there for over a year and eventually moved down to Fort Myers so we could attend college and be closer to family.</p>
         <img src="IMG_3832.JPG" alt="Credit to Nemesis Photo" width="300" height="200">
         <img src="IMG_2947.JPG" alt="Tali and Quinn" width="200" height="200" >
         <video controls width="200" height="300">
             <source src="IMG_2963.MOV">
         </video>
-        <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I still continue to listen to a very wide variety but I think of an genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, This is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
+        <p>I am a big fan of music as well, since a young age I found myself listening to a wide variety of music. I continue to listen to a very wide variety, but I think of any genres I continue to bounce between Hip-Hip and Death Metal. Take a listen to some of my favorite artists, this is Sweatpants by Childish Gambino and Our Lady of Perpetual Sorrow by The Acacia Strain.</p>
         <audio controls>
             <source src="08%20IV.%20Sweatpants%20(online-audio-converter.com).mp3" type="audio/mp3">
             <p>Your browser does not support the audio element</p>
@@ -32,7 +32,7 @@
         </audio>
         <p>I am a Veteran of the U.S. Army, which is where I learned a love of working with computers. I served three and half years of activity duty, moving around to places such as South Carolina, Texas, South Korea, and Georgia. During my time in the Army I also received many tattoos; I currently have six tattoos which amount to roughly thirty-five hours.
         </p>
-        <!--when adding a photo move photo to the folder you are deriving the code from-->
+        <!--when adding a photo or other file move it to the folder you are deriving the code from-->
         <img src="IMG_2753.JPG" height="250" width="200" alt="Army">
         <svg width="200" height="250">
             <polygon points="100,10 40 198 190, 78 10, 78 160,198" style="fill:forestgreen;stroke:goldenrod;stroke-width:3;fill-rule:evenodd;"/>
