--- a/Project_1.html
+++ b/Project_1.html
@@ -68,6 +68,13 @@
             <li><a href="https://github.com/zjdanis">Github</a></li>
             <li><a href="https://www.codecademy.com/zdanis">Codecademy</a></li>
             <li><a href="FieldsReportDanis.pdf">Fields Report</a></li>
+            <li><a href="https://linkedin.com/in/zacherydanis">LinkedIn</a></li>
+            <li><a href="https://scratch.mit.edu/projects/284009650/">Scratch</a></li>
+            <li>To make the website usable, I made the colors dull with a low contrast so it is easy on the eyes. 
+                I also made sure that the colors complimented with the images I added. The video and audio clips 
+                I added were set up to make sure they played when the user started them. If I had used autoplay 
+                it would be too overwhelming with all playing at the same time. I added links to different profiles 
+                to show accomplishments.</li>
         </ul>
      </div>
         
