--- a/Project_1.html
+++ b/Project_1.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/Project_1.css">
     <title>Zachery Danis</title>
 </head>
-<img src="https://images.ctfassets.net/7ca9kifzimh6/4E4BoAIvHq2KIIuMQakEq2/089f44baebb3e06399894bcbc458efcd/technology.jpg?q=50&fl=progressive" class="banner" height="200" width="100%">
 
 <body>
+    <img src="https://images.ctfassets.net/7ca9kifzimh6/4E4BoAIvHq2KIIuMQakEq2/089f44baebb3e06399894bcbc458efcd/technology.jpg?q=50&fl=progressive" alt="banner" class="banner" height="200">
     <div class="about_me">
         <canvas id="myCanvas" width="550" height="100" style="border:1px solid #000000">
             <script>
@@ -74,7 +74,7 @@
             <li>CSS</li>
             <li>Caeser Cipher</li>
             <li>Type Phrase:<input id="caesar" type="text" name="phase"></li>
-            <li>Type Shift: <input id="shiftIt" type="integer" name="num"></li>
+            <li>Type Shift: <input id="shiftIt" type="number" name="num"></li>
             <script>
                 function shift(slideIt) {
                     var slideText = document.getElementById("shiftIt").value;
