--- a/Project_1.html
+++ b/Project_1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 
 <head>
-    <link rel="stylesheet" href="css/Project_1.css">
+    <link rel="stylesheet" href="Project_1.css">
     <title>Zachery Danis</title>
 </head>
 
@@ -119,6 +119,11 @@
                 to show accomplishments.</li>
         </ul>
     </div>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+        </a>
+    </p>
 </body>
 
 </html>
