--- a/Project_1.html
+++ b/Project_1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 
 <head>
-    <link rel="stylesheet" href="Project_1.css">
+    <link rel="stylesheet" href="css/Project_1.css">
     <title>Zachery Danis</title>
 </head>
 
